# nginx-keycloak

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  justfile  nginx-keycloak.env  pre-commit.sh
.github/: dependabot.yaml
.github/workflows/: ci.yml  docker.yml  docker_clean.yml  merge-me.yml  test.yml
src/: config.rs  main.rs  oidc.rs  redis.rs
src/endpoints/: auth.rs  mod.rs
