[package]
name = "nginx-keycloak"
description = "Keycloak Integration for Nginx via auth_request"
version = "0.3.2"
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Defelo/nginx-keycloak"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
axum = { version = "0.6.20", default-features = false, features = ["tokio", "headers", "query"] }
color-eyre = { version = "0.6.2", default-features = false }
config = { version = "0.13.3", default-features = false, features = ["json", "toml"] }
eyre = { version = "0.6.8", default-features = false }
log = { version = "0.4.20", default-features = false }
pretty_env_logger = { version = "0.5.0", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
redis = { version = "0.23.2", default-features = false, features = ["tokio-comp"] }
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.184", default-features = false, features = ["derive"] }
tokio = { version = "1.32.0", default-features = false, features = ["macros", "rt-multi-thread"] }
url = { version = "2.4.0", default-features = false }
