[package]
name = "nginx-keycloak"
description = "Keycloak Integration for Nginx via auth_request"
version = "0.3.6"
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Defelo/nginx-keycloak"

[dependencies]
axum = { version = "0.6.20", default-features = false, features = ["tokio", "headers", "query"] }
color-eyre = { version = "0.6.3", default-features = false }
config = { version = "0.14.0", default-features = false, features = ["json", "toml"] }
eyre = { version = "0.6.12", default-features = false }
log = { version = "0.4.21", default-features = false }
pretty_env_logger = { version = "0.5.0", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
redis = { version = "0.25.2", default-features = false, features = ["tokio-comp"] }
reqwest = { version = "0.11.26", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
tokio = { version = "1.36.0", default-features = false, features = ["macros", "rt-multi-thread"] }
url = { version = "2.5.0", default-features = false }
